--- a/cancionesApp/src/app/pages/song-detail/song-detail.html
+++ b/cancionesApp/src/app/pages/song-detail/song-detail.html
@@ -10,6 +10,14 @@
       <p class="card-text"><strong>Artista:</strong> {{ song.artist.name }}</p>
       <p class="card-text"><strong>Álbum:</strong> {{ song.album.title }}</p>
       <audio [src]="song.preview" controls class="w-100"></audio>
+      <!-- Botón para abrir el modal -->
+      <button
+        class="btn btn-info mt-3"
+        *ngIf="song?.artist?.id"
+        (click)="openArtistModal(song.artist.id)">
+        Ver artista
+      </button>
+      <!-- Modal de Bootstrap -->
     </div>
   </div>
 </div>
@@ -17,3 +25,45 @@
 <div class="container mt-4" *ngIf="!isLoading && hasError">
   <div class="alert alert-danger">Canción no encontrada.</div>
 </div>
+
+<!-- Fondo oscuro detrás del modal -->
+<div class="modal-backdrop fade show" *ngIf="showArtistModal"></div>
+
+<!-- Modal -->
+<div
+  class="modal fade show"
+  tabindex="-1"
+  [ngClass]="{ 'd-block': showArtistModal }"
+  [style.display]="showArtistModal ? 'block' : 'none'"
+  role="dialog"
+>
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content shadow-lg rounded">
+
+      <div class="modal-header bg-dark text-white">
+        <h5 class="modal-title mx-auto">{{ artist?.name }}</h5>
+        <button
+          type="button"
+          class="btn-close btn-close-white position-absolute end-0 me-3"
+          aria-label="Cerrar"
+          (click)="closeArtistModal()"
+        ></button>
+      </div>
+
+      <div class="modal-body text-center" *ngIf="artist">
+        <img [src]="artist.picture_big" class="img-fluid rounded mb-4 shadow" alt="Imagen del artista" style="max-height: 300px; object-fit: cover;">
+
+        <h6 class="mb-3">Top canciones</h6>
+
+        <ul class="list-group list-group-flush overflow-auto" style="max-height: 300px;">
+          <li class="list-group-item" *ngFor="let track of topTracks">
+            <strong>{{ track.title }}</strong>
+            <audio class="w-100 mt-2" [src]="track.preview" controls></audio>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</div>
+
