--- a/cancionesApp/src/app/pages/contact/contact.html
+++ b/cancionesApp/src/app/pages/contact/contact.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <div class="col-md-8 col-lg-6">
-      <div class="card shadow-lg rounded-4 border-0">
+      <div class="card-gradient shadow-lg rounded-4 border-0">
         <div class="card-body p-5">
           <h2 class="text-center mb-4">Contáctanos</h2>
           <form #contactForm="ngForm" (ngSubmit)="enviarFormulario()" novalidate>
