--- a/cancionesApp/src/app/components/navbar/navbar.scss
+++ b/cancionesApp/src/app/components/navbar/navbar.scss
@@ -78,3 +78,20 @@
 .btn-logout:hover i {
   color: #ffca28;
 }
+
+.dropdown-menu2 {
+  display: none;
+  z-index: 1050;
+}
+
+.dropdown-menu2.d-block {
+  display: block;
+  position: absolute;
+  width: 50%;
+  max-height: 250px;
+  overflow-y: auto;
+  background-color: white;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 10px;
+}
