--- a/cancionesApp/src/app/pages/favorites/favorites.html
+++ b/cancionesApp/src/app/pages/favorites/favorites.html
@@ -8,7 +8,7 @@
 
   <!-- Lista de canciones favoritas -->
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-    <div *ngFor="let song of favorites" class="col">
+    <div *ngFor="let song of favorites" class="col" [routerLink]="['/songs',song.id]">
       <div class="card shadow-sm h-100">
         <img [src]="song.album.cover" class="card-img-top" alt="{{ song.title }}">
         <div class="card-body">
